[gd_scene load_steps=3 format=3 uid="uid://b7p6og3segqx1"]

[ext_resource type="Script" path="res://scripts/fire_ring.gd" id="1_xrioi"]
[ext_resource type="PackedScene" uid="uid://c3ryjs8q6ejnw" path="res://scenes/blob_splash.tscn" id="1_yt55l"]

[node name="fire_ring" type="Node2D"]
script = ExtResource("1_xrioi")

[node name="BlobSplash" parent="." instance=ExtResource("1_yt55l")]

[node name="BlobSplash2" parent="." instance=ExtResource("1_yt55l")]

[node name="BlobSplash3" parent="." instance=ExtResource("1_yt55l")]

[node name="BlobSplash4" parent="." instance=ExtResource("1_yt55l")]

[node name="BlobSplash5" parent="." instance=ExtResource("1_yt55l")]

[node name="BlobSplash6" parent="." instance=ExtResource("1_yt55l")]

[node name="BlobSplash7" parent="." instance=ExtResource("1_yt55l")]

[node name="BlobSplash8" parent="." instance=ExtResource("1_yt55l")]
